@@ -10,7 +10,8 @@
 #ifndef _WIN32_IE
 #define _WIN32_IE 0x0501
 #else
-#if (_WIN32_IE < 0x0501)
+/* FIXME: This really must be 0x0501 !!! */
+#if (_WIN32_IE < 0x0500)
 #error _WIN32_IE setting conflicts
 #endif
 #endif
